# enterprise-ai-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_identity_and_audit.py  0002_documents_and_chunks.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: healthz.py  router.py
apps/api/app/core/: config.py  deps.py  errors.py  logging.py  tracing.py
apps/api/app/infra/: db.py  kafka.py  outbox.py  redis.py
apps/api/app/middleware/: audit.py  auth.py  idempotency.py  rate_limit.py  request_id.py  tenant.py
apps/api/app/modules/chat/: agent.py  api.py  schemas.py  service.py  tools.py
apps/api/app/modules/identity/: __init__.py  api.py  events.py  models.py  rbac.py  repository.py  schemas.py  security.py  service.py
apps/api/app/modules/rag/: api.py  chunker.py  embeddings.py  events.py  events_outbox.py  models.py  schemas.py  service.py  storage.py
apps/api/app/scripts/: demo_rag_search.py  seed.py  test_agent.py  verify_outbox_kafka.py
apps/api/app/workers/embedding/: __main__.py  handler.py
apps/api/app/workers/ingestion/: __main__.py  extractors.py  handler.py
apps/api/tests/: conftest.py  factories.py
apps/api/tests/integration/: _helpers.py  test_api_keys.py  test_auth.py  test_documents.py  test_healthz.py  test_idempotency.py  test_memberships.py  test_orgs.py  test_rls_isolation.py
apps/api/tests/unit/: test_errors.py  test_rbac.py  test_security.py
docs/adr/: 0001-modular-monolith-vs-microservices.md  0002-pgvector-vs-dedicated-vector-db.md  0003-sse-vs-websockets-for-streaming.md  0004-tenant-isolation-with-postgres-rls.md  0005-llm-provider-abstraction-anthropic-first.md  006-rag-ingestion-pipeline.md  README.md
docs/diagrams/: README.md  data-flow-rag.mmd  system-context.mmd
observability/: otel-collector-config.yaml
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: loki-config.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo-config.yaml
scripts/: healthcheck.sh  postgres-init.sql  seed-kafka-topics.sh
