[project]
name = "eaip-api"
version = "0.1.0"
description = "Enterprise AI Workflow Platform — core API service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Lakshmi Anne", email = "lakshmianne07@gmail.com" }]
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2",
  "aiokafka>=0.12",
  "argon2-cffi>=23.1",
  "pyjwt[crypto]>=2.10",
  "cryptography>=43",
  "python-multipart>=0.0.20",
  "httpx>=0.28",
  "structlog>=24.4",
  "orjson>=3.10",
  "tenacity>=9.0",
  "opentelemetry-api>=1.29",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-exporter-otlp>=1.29",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-instrumentation-redis>=0.50b0",
  "opentelemetry-instrumentation-aiokafka>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-instrumentation-asyncpg>=0.50b0",
  "lz4>=4.4.5",
  "pgvector>=0.4.2",
  "aioboto3>=15.5.0",
  "tiktoken>=0.12.0",
  "pypdf>=6.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "testcontainers[postgres,redis,kafka]>=4.9",
  "factory-boy>=3.3",
  "faker>=33",
  "ruff>=0.8",
  "mypy>=1.13",
  "bandit>=1.8",
  "freezegun>=1.5",
  "respx>=0.22",
  "types-redis>=4.6",
  "psycopg2-binary>=2.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- ruff ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",                # isort
  "UP",               # pyupgrade
  "B",                # bugbear
  "SIM",              # simplifications
  "C4",               # comprehensions
  "RUF",              # ruff-specific
  "ASYNC",            # async correctness
  "S",                # bandit-lite
  "TCH",              # type-checking imports
]
ignore = [
  "S101",             # assert in tests is fine
  "S104",             # binding to 0.0.0.0 in dev
  "B008",             # FastAPI Depends() default arg pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311"]
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["aiokafka.*", "factory.*", "testcontainers.*"]
ignore_missing_imports = true

# --- pytest --------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
  "integration: integration tests requiring testcontainers",
  "unit: pure unit tests with no external dependencies",
]

# --- coverage -------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/scripts/*", "alembic/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

# --- bandit --------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert is fine outside production code paths

[tool.uv]
package = true
